# filebase

./: .gitignore  Cargo.toml  destination_config.json
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/components/: ItemCard.svelte
res/systemd/: _filebase.service
src/: api_handler.rs  main.rs
src/file_system/: destinations.rs  mod.rs  model.rs  storage.rs  thumbnail.rs  watchdog.rs
