[package]
name = "filebase"
version = "0.1.0"
authors = ["nzelot <leontsteiner@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
new_mime_guess = "2.1.1"
notify = "4"
chrono = {version = "0.4.19", features = ["serde"] }
kamadak-exif = "0.5.4"
image = "0.23.14"